♻️ change default placeholder for quick

--- a/templates/Spec File for TCA.xctemplate/TemplateInfo.plist
+++ b/templates/Spec File for TCA.xctemplate/TemplateInfo.plist
@@ -30,7 +30,7 @@
 			<key>Type</key>
 			<string>text</string>
 			<key>Default</key>
-			<string>YourApp</string>
+			<string>Your feature</string>
 			<key>NotPersisted</key>
 			<true/>
 		</dict>
